# e2sviz

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
data/: july_2023_mainmeter.csv
docs/: Makefile  conf.py  index.md
docs/reference/data/: data_preparation.md  functions.md  manipulations.md  standard_data_process.md
docs/reference/visualization/: index.md  plot_styles.md  visualize.md
docs/user-guide/: columnvizdata.md  data_manip.md  data_prep.md  data_viz.md  getting_started.md  metadata.md  new_page.md  standard_process.md
e2sviz/: Makefile  README.md
e2sviz/data/: data_preparation.py  functions.py  manipulations.py  standard_data_process.py
e2sviz/docs/: index.rst  make.bat
e2sviz/structure/: datetime_schema.py  enums.py  viz_schema.py
e2sviz/visualization/: plot_styles.py  visualize.py  viz_types.py
notebooks/: clean_demo.ipynb  example_consumption_data.csv  pe_energy_test.ipynb  rotherham_chp_eda.ipynb  testing_notebook.ipynb
reference/data/: index.html
reference/data/functions/: index.html
reference/data/manipulations/: index.html
reference/data/standard_data_process/: index.html
reference/visualization/: index.html
reference/visualization/plot_styles/: index.html
reference/visualization/visualize/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
site/: index.html  objects.inv
site/reference/data/: index.html
site/reference/data/data_preparation/: index.html
site/reference/data/functions/: index.html
site/reference/data/manipulations/: index.html
site/reference/data/standard_data_process/: index.html
site/reference/visualization/: index.html
site/reference/visualization/plot_styles/: index.html
site/reference/visualization/visualize/: index.html
site/search/: search_index.json
src/chpqa_test_files/: import_data.py  schema.py
src/data/: data_preparation.py  data_preperation.py  enums.py  manipulations.py  standard_data_process.py  viz_schema.py
src/visualization/: plot_styles.py  visualize.py  viz_types.py
