[tool.poetry]
name = "e2sviz"
version = "0.1.0"
description = ""
authors = ["Rhys Jones <rhys.jones@e2s.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
seaborn = "^0.12.2"
bokeh = "^3.1.1"
e2slib = {git = "git@github.com:empowering-energy-solutions-ltd/e2slib.git", rev = "main"}
nbformat = "^5.9.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
ipykernel = "^6.23.1"
pylance = "^0.4.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
