[tool.poetry]
name = "e2sviz"
version = "0.1.0"
description = ""
authors = ["Rhys Jones <rhys.jones@e2s.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
seaborn = "^0.12.2"
bokeh = "^3.1.1"
nbformat = "^5.9.0"
pylint = "^2.17.4"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
pygments = "^2.15.1"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
ipython = "^8.21.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
ipykernel = "^6.23.1"
pylance = "^0.4.20"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
