[tool.poetry]
name = "e2sviz"
version = "0.1.0"
description = ""
authors = ["Rhys Jones <rhys.jones@e2s.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
seaborn = "^0.12.2"
nbformat = "^5.9.0"
pylint = "^2.17.4"
ipython = "^8.21.0"
mkdocs-gen-files = "^0.5.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.1"
mkdocs-material = "^9.5.14"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings-python = "^1.9.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
ipykernel = "^6.23.1"
pylance = "^0.4.20"
pytest = "^7.4.0"
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
